--- a/index.scss
+++ b/index.scss
@@ -57,14 +57,14 @@ body {
   &-content {
     position: absolute;
     top: 266px;
-    left: 116px;
+    left: 0;
     width: 564px;
   }
 
   .icon {
     position: absolute;
     top: 75px;
-    left: 116px;
+    left: 0;
     width: 64px;
     height: 64px;
   }
@@ -210,6 +210,173 @@ body {
   }
 }
 
+.bmi-meaning {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10rem;
+  padding: 70px 0px;
+
+  .section-one {
+    position: relative;
+    padding: 50px;
+    padding-bottom: 0px;
+    .bmi-image {
+      width: 468px;
+      height: 533px;
+      object-fit: cover;
+    }
+    &::after {
+      position: absolute;
+      content: "";
+      left: 0%;
+      bottom: 0;
+      background-color: #e7f5fe;
+      width: 568px;
+      height: 353px;
+      z-index: -999;
+      border-radius: $border-radius-base;
+    }
+  }
+  .section-two {
+    margin-top: 100px;
+    .section-title {
+      align-self: stretch;
+      letter-spacing: -0.05em;
+      line-height: 110%;
+      font-weight: 600;
+      font-size: $xl-size;
+    }
+    p {
+      margin-top: 20px;
+      align-self: stretch;
+      position: relative;
+      font-size: $base-size;
+      line-height: 150%;
+      color: $color-dark-blue;
+    }
+  }
+}
+
+.tips {
+  position: relative;
+  margin-top: 10rem;
+  padding: 3rem 0rem;
+  .tips-bg {
+    position: absolute;
+    background: linear-gradient(-69.9deg, #d6e6fe, rgba(214, 251, 254, 0));
+    width: 100%;
+    // height: 100%;
+    opacity: 0.25;
+    right: -5%;
+    bottom: 0;
+    top: 0%;
+  }
+  .tips-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    gap: 5rem;
+    .tip {
+      display: flex;
+      flex-direction: column;
+      gap: $gap-xl;
+      img {
+        width: 64px;
+        height: 64px;
+      }
+      h3 {
+        font-weight: 600;
+        font-size: $lg-size;
+      }
+    }
+  }
+}
+
+.bmi-limitations {
+  margin-top: 5rem;
+  .contant {
+    max-width: 600px;
+    .section-title {
+      font-size: $xl-size;
+      font-weight: 600;
+    }
+    p {
+      font-size: $xs-size;
+      color: $color-dark-blue;
+    }
+  }
+  .limitations-content {
+    position: relative;
+    height: 700px;
+    .limitation {
+      position: absolute;
+      box-shadow: 16px 32px 56px rgba(143, 174, 207, 0.175);
+      border-radius: $border-radius-base;
+      background-color: $color-white;
+      width: 365px;
+      overflow: hidden;
+      padding: $padding-lg;
+      box-sizing: border-box;
+
+      &:nth-child(1) {
+        top: -20%;
+        right: 10%;
+      }
+      &:nth-child(2) {
+        top: 17%;
+        right: 0%;
+      }
+      &:nth-child(3) {
+        top: 17%;
+        right: 31%;
+      }
+      &:nth-child(4) {
+        top: 47%;
+        right: 18.2%;
+      }
+      &:nth-child(5) {
+        top: 47%;
+        right: 49.3%;
+      }
+      .box {
+        align-self: stretch;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        gap: $gap-base;
+        .icon {
+          width: 32px;
+          position: relative;
+          height: 32px;
+          overflow: hidden;
+          flex-shrink: 0;
+        }
+        h3 {
+          letter-spacing: -0.05em;
+          font-weight: 600;
+        }
+      }
+      p {
+        align-self: stretch;
+        position: relative;
+        font-size: $base-size;
+        line-height: 150%;
+        color: $color-dark-blue;
+      }
+    }
+  }
+}
+
+.desktop-child {
+  position: absolute;
+  top: 749px;
+  width: 85px;
+  height: 200px;
+  right: 20%;
+}
+
 @media (max-width: 1440px) {
   .hero {
     &-background {
@@ -221,6 +388,26 @@ body {
     }
     &-content {
       left: 0px;
+    }
+  }
+  .bmi-meaning {
+    gap: 3rem;
+    padding: 0px;
+
+    .section-one {
+      position: relative;
+      padding: 50px;
+      padding-bottom: 0px;
+      .bmi-image {
+        width: 468px;
+        height: 533px;
+      }
+      &::after {
+        width: 100%;
+      }
+    }
+    .section-two {
+      margin-top: 10rem;
     }
   }
 }
@@ -256,9 +443,73 @@ body {
       }
     }
   }
+  .bmi-meaning {
+    .section-one {
+      position: relative;
+      padding: 50px;
+      padding-bottom: 0px;
+      .bmi-image {
+        width: 368px;
+        height: 433px;
+      }
+    }
+  }
+  .tips {
+    margin-top: 7rem;
+    .tips-content {
+      gap: 2rem;
+    }
+  }
+  .bmi-limitations {
+    .contant {
+      max-width: 400px;
+      .section-title {
+        font-size: $lg-size;
+      }
+    }
+    .limitations-content {
+      .limitation {
+        max-width: 260px;
+        .box {
+          h3 {
+            font-size: $sm-size;
+          }
+        }
+        p {
+          font-size: $xs-size;
+        }
+        &:nth-child(1) {
+          top: -20%;
+          right: 10%;
+        }
+        &:nth-child(2) {
+          top: 17%;
+          right: 0%;
+        }
+        &:nth-child(3) {
+          top: 17%;
+          right: 31%;
+        }
+        &:nth-child(4) {
+          top: 47%;
+          right: 18.2%;
+        }
+        &:nth-child(5) {
+          top: 47%;
+          right: 49.3%;
+        }
+      }
+    }
+  }
+  .desktop-child {
+    top: 669px;
+  }
 }
 
 @media (max-width: 768px) {
+  .desktop-child {
+    display: none;
+  }
   .hero {
     &-background {
       left: 0;
@@ -292,13 +543,79 @@ body {
     margin: 0;
     padding: 0;
   }
+  .bmi-meaning {
+    .section-one {
+      padding-top: 12rem;
+      padding-bottom: 0px;
+      .bmi-image {
+        width: 268px;
+        height: 333px;
+      }
+    }
+    .section-two {
+      .section-title {
+        font-size: $lg-size;
+      }
+    }
+  }
+  .tips {
+    .tips-content {
+      flex-direction: column;
+      .tip {
+        flex-direction: row;
+      }
+    }
+  }
+  .bmi-limitations {
+    .contant {
+      max-width: 100%;
+      text-align: center;
+      padding: 0px 2rem;
+      .section-title {
+        font-size: $lg-size;
+      }
+    }
+    .limitations-content {
+      display: inline-grid;
+      grid-template-columns: auto auto;
+      gap: $gap-lg;
+      margin-top: 3rem;
+      height: 100%;
+      margin-bottom: 5rem;
+      .limitation {
+        max-width: 90%;
+        position: sticky;
+
+        &:nth-child(1) {
+          top: 0%;
+          right: 0%;
+        }
+        &:nth-child(2) {
+          top: 0%;
+          right: 0%;
+        }
+        &:nth-child(3) {
+          top: 0%;
+          right: 0%;
+        }
+        &:nth-child(4) {
+          top: 0%;
+          right: 0%;
+        }
+        &:nth-child(5) {
+          top: 0%;
+          right: 0%;
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 425px) {
   .hero {
     .input-section {
       top: 100%;
-      width: 350px;
+      width: 370px;
       .input-container {
         flex-direction: column;
         .input-item {
@@ -313,6 +630,49 @@ body {
         gap: 0px;
         align-items: start;
         border-radius: $border-radius-base;
+      }
+    }
+  }
+
+  .bmi-meaning {
+    margin-top: 13rem;
+    flex-direction: column;
+    gap: 0;
+    .section-one {
+      padding-top: 12rem;
+      padding-bottom: 0px;
+      .bmi-image {
+        width: 268px;
+        height: 333px;
+      }
+    }
+    .section-two {
+      margin-top: 2rem;
+      p {
+        font-size: $xs-size;
+      }
+    }
+  }
+  .tips {
+    padding: 1rem;
+    .tips-content {
+      flex-direction: column;
+      .tip {
+        flex-direction: column;
+      }
+    }
+  }
+  .bmi-limitations {
+    .limitations-content {
+      grid-template-columns: auto;
+      justify-items: center;
+      gap: $gap-lg;
+      margin-top: 3rem;
+      height: 100%;
+      left: 10px;
+      .limitation {
+        max-width: 100%;
+        padding: 2rem;
       }
     }
   }
