--- a/index.css
+++ b/index.css
@@ -26,13 +26,13 @@ body {
 .hero-content {
   position: absolute;
   top: 266px;
-  left: 116px;
+  left: 0;
   width: 564px;
 }
 .hero .icon {
   position: absolute;
   top: 75px;
-  left: 116px;
+  left: 0;
   width: 64px;
   height: 64px;
 }
@@ -166,6 +166,171 @@ body {
   line-height: 150%;
 }
 
+.bmi-meaning {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10rem;
+  padding: 70px 0px;
+}
+.bmi-meaning .section-one {
+  position: relative;
+  padding: 50px;
+  padding-bottom: 0px;
+}
+.bmi-meaning .section-one .bmi-image {
+  width: 468px;
+  height: 533px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.bmi-meaning .section-one::after {
+  position: absolute;
+  content: "";
+  left: 0%;
+  bottom: 0;
+  background-color: #e7f5fe;
+  width: 568px;
+  height: 353px;
+  z-index: -999;
+  border-radius: 16px;
+}
+.bmi-meaning .section-two {
+  margin-top: 100px;
+}
+.bmi-meaning .section-two .section-title {
+  align-self: stretch;
+  letter-spacing: -0.05em;
+  line-height: 110%;
+  font-weight: 600;
+  font-size: 48px;
+}
+.bmi-meaning .section-two p {
+  margin-top: 20px;
+  align-self: stretch;
+  position: relative;
+  font-size: 16px;
+  line-height: 150%;
+  color: #5e6e85;
+}
+
+.tips {
+  position: relative;
+  margin-top: 10rem;
+  padding: 3rem 0rem;
+}
+.tips .tips-bg {
+  position: absolute;
+  background: linear-gradient(-69.9deg, #d6e6fe, rgba(214, 251, 254, 0));
+  width: 100%;
+  opacity: 0.25;
+  right: -5%;
+  bottom: 0;
+  top: 0%;
+}
+.tips .tips-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 5rem;
+}
+.tips .tips-content .tip {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.tips .tips-content .tip img {
+  width: 64px;
+  height: 64px;
+}
+.tips .tips-content .tip h3 {
+  font-weight: 600;
+  font-size: 24px;
+}
+
+.bmi-limitations {
+  margin-top: 5rem;
+}
+.bmi-limitations .contant {
+  max-width: 600px;
+}
+.bmi-limitations .contant .section-title {
+  font-size: 48px;
+  font-weight: 600;
+}
+.bmi-limitations .contant p {
+  font-size: 14px;
+  color: #5e6e85;
+}
+.bmi-limitations .limitations-content {
+  position: relative;
+  height: 700px;
+}
+.bmi-limitations .limitations-content .limitation {
+  position: absolute;
+  box-shadow: 16px 32px 56px rgba(143, 174, 207, 0.175);
+  border-radius: 16px;
+  background-color: #fff;
+  width: 365px;
+  overflow: hidden;
+  padding: 24px;
+  box-sizing: border-box;
+}
+.bmi-limitations .limitations-content .limitation:nth-child(1) {
+  top: -20%;
+  right: 10%;
+}
+.bmi-limitations .limitations-content .limitation:nth-child(2) {
+  top: 17%;
+  right: 0%;
+}
+.bmi-limitations .limitations-content .limitation:nth-child(3) {
+  top: 17%;
+  right: 31%;
+}
+.bmi-limitations .limitations-content .limitation:nth-child(4) {
+  top: 47%;
+  right: 18.2%;
+}
+.bmi-limitations .limitations-content .limitation:nth-child(5) {
+  top: 47%;
+  right: 49.3%;
+}
+.bmi-limitations .limitations-content .limitation .box {
+  align-self: stretch;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 16px;
+}
+.bmi-limitations .limitations-content .limitation .box .icon {
+  width: 32px;
+  position: relative;
+  height: 32px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+.bmi-limitations .limitations-content .limitation .box h3 {
+  letter-spacing: -0.05em;
+  font-weight: 600;
+}
+.bmi-limitations .limitations-content .limitation p {
+  align-self: stretch;
+  position: relative;
+  font-size: 16px;
+  line-height: 150%;
+  color: #5e6e85;
+}
+
+.desktop-child {
+  position: absolute;
+  top: 749px;
+  width: 85px;
+  height: 200px;
+  right: 20%;
+}
+
 @media (max-width: 1440px) {
   .hero-background {
     left: -50px;
@@ -176,6 +341,25 @@ body {
   }
   .hero-content {
     left: 0px;
+  }
+  .bmi-meaning {
+    gap: 3rem;
+    padding: 0px;
+  }
+  .bmi-meaning .section-one {
+    position: relative;
+    padding: 50px;
+    padding-bottom: 0px;
+  }
+  .bmi-meaning .section-one .bmi-image {
+    width: 468px;
+    height: 533px;
+  }
+  .bmi-meaning .section-one::after {
+    width: 100%;
+  }
+  .bmi-meaning .section-two {
+    margin-top: 10rem;
   }
 }
 @media (max-width: 1024px) {
@@ -204,8 +388,64 @@ body {
   .hero .input-section .input-item .input-wrapper {
     padding: 12px;
   }
+  .bmi-meaning .section-one {
+    position: relative;
+    padding: 50px;
+    padding-bottom: 0px;
+  }
+  .bmi-meaning .section-one .bmi-image {
+    width: 368px;
+    height: 433px;
+  }
+  .tips {
+    margin-top: 7rem;
+  }
+  .tips .tips-content {
+    gap: 2rem;
+  }
+  .bmi-limitations .contant {
+    max-width: 400px;
+  }
+  .bmi-limitations .contant .section-title {
+    font-size: 24px;
+  }
+  .bmi-limitations .limitations-content .limitation {
+    max-width: 260px;
+  }
+  .bmi-limitations .limitations-content .limitation .box h3 {
+    font-size: 20px;
+  }
+  .bmi-limitations .limitations-content .limitation p {
+    font-size: 14px;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(1) {
+    top: -20%;
+    right: 10%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(2) {
+    top: 17%;
+    right: 0%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(3) {
+    top: 17%;
+    right: 31%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(4) {
+    top: 47%;
+    right: 18.2%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(5) {
+    top: 47%;
+    right: 49.3%;
+  }
+  .desktop-child {
+    top: 669px;
+  }
 }
 @media (max-width: 768px) {
+  .desktop-child {
+    display: none;
+  }
   .hero-background {
     left: 0;
     width: 100%;
@@ -236,11 +476,68 @@ body {
     margin: 0;
     padding: 0;
   }
+  .bmi-meaning .section-one {
+    padding-top: 12rem;
+    padding-bottom: 0px;
+  }
+  .bmi-meaning .section-one .bmi-image {
+    width: 268px;
+    height: 333px;
+  }
+  .bmi-meaning .section-two .section-title {
+    font-size: 24px;
+  }
+  .tips .tips-content {
+    flex-direction: column;
+  }
+  .tips .tips-content .tip {
+    flex-direction: row;
+  }
+  .bmi-limitations .contant {
+    max-width: 100%;
+    text-align: center;
+    padding: 0px 2rem;
+  }
+  .bmi-limitations .contant .section-title {
+    font-size: 24px;
+  }
+  .bmi-limitations .limitations-content {
+    display: inline-grid;
+    grid-template-columns: auto auto;
+    gap: 24px;
+    margin-top: 3rem;
+    height: 100%;
+    margin-bottom: 5rem;
+  }
+  .bmi-limitations .limitations-content .limitation {
+    max-width: 90%;
+    position: sticky;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(1) {
+    top: 0%;
+    right: 0%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(2) {
+    top: 0%;
+    right: 0%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(3) {
+    top: 0%;
+    right: 0%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(4) {
+    top: 0%;
+    right: 0%;
+  }
+  .bmi-limitations .limitations-content .limitation:nth-child(5) {
+    top: 0%;
+    right: 0%;
+  }
 }
 @media (max-width: 425px) {
   .hero .input-section {
     top: 100%;
-    width: 350px;
+    width: 370px;
   }
   .hero .input-section .input-container {
     flex-direction: column;
@@ -256,5 +553,45 @@ body {
     gap: 0px;
     align-items: start;
     border-radius: 16px;
+  }
+  .bmi-meaning {
+    margin-top: 13rem;
+    flex-direction: column;
+    gap: 0;
+  }
+  .bmi-meaning .section-one {
+    padding-top: 12rem;
+    padding-bottom: 0px;
+  }
+  .bmi-meaning .section-one .bmi-image {
+    width: 268px;
+    height: 333px;
+  }
+  .bmi-meaning .section-two {
+    margin-top: 2rem;
+  }
+  .bmi-meaning .section-two p {
+    font-size: 14px;
+  }
+  .tips {
+    padding: 1rem;
+  }
+  .tips .tips-content {
+    flex-direction: column;
+  }
+  .tips .tips-content .tip {
+    flex-direction: column;
+  }
+  .bmi-limitations .limitations-content {
+    grid-template-columns: auto;
+    justify-items: center;
+    gap: 24px;
+    margin-top: 3rem;
+    height: 100%;
+    left: 10px;
+  }
+  .bmi-limitations .limitations-content .limitation {
+    max-width: 100%;
+    padding: 2rem;
   }
 }/*# sourceMappingURL=index.css.map */
