--- a/index.scss
+++ b/index.scss
@@ -630,7 +630,7 @@ body {
           }
         }
       }
-      .imperial-input {
+      .imperial-input-box {
         flex-direction: row;
       }
       .bmi-result {
