--- a/index.css
+++ b/index.css
@@ -513,6 +513,7 @@ body {
     gap: 24px;
     margin-top: 3rem;
     height: 100%;
+    width: 100%;
     margin-bottom: 5rem;
   }
   .bmi-limitations .limitations-content .limitation {
@@ -542,8 +543,8 @@ body {
 }
 @media (max-width: 425px) {
   .hero .input-section {
-    top: 100%;
-    width: 370px;
+    top: 105%;
+    width: 360px;
   }
   .hero .input-section .input-container {
     flex-direction: column;
@@ -571,6 +572,7 @@ body {
   .bmi-meaning .section-one {
     padding-top: 12rem;
     padding-bottom: 0px;
+    padding: 2.5rem;
   }
   .bmi-meaning .section-one .bmi-image {
     width: 268px;
@@ -578,12 +580,16 @@ body {
   }
   .bmi-meaning .section-two {
     margin-top: 2rem;
+    padding: 2.5rem;
   }
   .bmi-meaning .section-two p {
     font-size: 14px;
   }
   .tips {
-    padding: 1rem;
+    padding: 2rem;
+  }
+  .tips .tips-bg {
+    right: 0%;
   }
   .tips .tips-content {
     flex-direction: column;
@@ -597,10 +603,10 @@ body {
     gap: 24px;
     margin-top: 3rem;
     height: 100%;
-    left: 10px;
+    left: 0px;
   }
   .bmi-limitations .limitations-content .limitation {
-    max-width: 100%;
+    max-width: 80%;
     padding: 2rem;
   }
 }/*# sourceMappingURL=index.css.map */
